--- a/Gallery.html
+++ b/Gallery.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="bg">
-        <img src="img/bg-beach(filtered).png" alt="">
+        <img src="img/bg-beach(filtered).jpg" alt="">
     </div>
     
     
@@ -30,29 +30,31 @@
         <h1>GALLERY</h1>
     </div>
     <div class="Box">
-        <div class="card">
-            <img src="img/beach2.jpg" alt="">
-            <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
+        <div style="width: 340px; height: 459px;" class="card">
+            <img style="width: 340px; height: 426px;" src="img/Group 12.jpg" alt="">
+            <p style="font-family: 'Rancho', cursive; ">Pantai Dlodo</p>
+            <p style=" position: absolute;left: 110px; top: 460px;">Wave</p>
+        </div>
+        <div style="margin-left: 74px; width: 471px; height: 350px;" class="card">
+            <img style="width: 471px; height:267px" src="img/beach2.jpg" alt="">
+            <p style="font-family: 'Rancho', cursive; ">Pantai Dlodo</p>
+        </div>
+        <div style="margin-left: 50px;" class="card">
+            <img style="width: 485px; height:239px" src="img/Stairs.jpg" alt="">
+            <p style="font-family: 'Rancho', cursive; ">Pantai Dlodo</p>
         </div>
         <div class="card">
-            <img src="img/beach2.jpg" alt="">
-            <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
+            <img style="width: 471px; height:267px" src="img/beach2.jpg" alt="">
+            <p style="font-family: 'Rancho', cursive; ">Pantai Dlodo</p>
         </div>
-        <div class="card">
-            <img src="img/beach2.jpg" alt="">
-            <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
+        <div style="margin-top: 0px; margin-left: 90px;" class="card">
+            <img style="width: 340px; height: 460px;" src="img/Group 12.jpg" alt="">
+            <p style="font-family: 'Rancho', cursive; ">Pantai Dlodo</p>
+            <p style="position: absolute;left: 110.4px;top: 493px;">Wave</p>
         </div>
-        <div class="card">
-            <img src="img/beach2.jpg" alt="">
-            <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
-        </div>
-        <div class="card">
-            <img src="img/beach2.jpg" alt="">
-            <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
-        </div>
-        <div class="card">
-            <img src="img/beach2.jpg" alt="">
-            <h3 style="font-family: 'Rancho', cursive; font-size: 24px;">Pantai Dlodo</h3>
+        <div style="margin-left: 0px;" class="card">
+            <img style="width: 485px; height:239px" src="img/Stairs.jpg" alt="">
+            <p style="font-family: 'Rancho', cursive; ">Pantai Dlodo</p>
         </div>
     </div>
 </body>
