--- a/Gallery.html
+++ b/Gallery.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="bg">
-        <img src="img/bg-beach(filtered).jpg" alt="">
+        <img src="img/bg-beachblue.jpg" alt="">
     </div>
     
     
