bersihin float dikit, wifiku buriq

--- a/destination.html
+++ b/destination.html
@@ -30,7 +30,7 @@
         <input  type="text" placeholder="Search" id="search">
         
     </div>
-    <div class="container">
+    <div class="container cf">
         <div style="float: left;margin-top: 40px;" >
             <h3 style="margin-left: 9.2%;">Filter</h3>
             <select>
