--- a/community.html
+++ b/community.html
@@ -23,98 +23,40 @@
     </header>
 
     <main>
-        <div class="biruMuda">
-            <table>
-                <tr>
-                    <td>
+        <div class="biruTua cf">
                         <img src="img/Profile.png" alt="Carter Calzoni" class="profile">
-                    </td>
-                    <td>
                         <h1>Carter Calzoni</h1>
                         <p>Community Leader</p><br>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                         Quaerat non magni odit adipisci, commodi dolor illum doloribus 
                         fugit ut doloremque ipsa sint dolore sit illo delectus 
-                        necessitatibus sed iusto quis.</p>
-                    </td>
-                </tr>
-            </table>    
+                        necessitatibus sed iusto quis.</p> 
         </div>
-        <div class="biruTua">
+        <div class="biruMuda cf">
             <h2>OUR SERVICE</h2>
-            <table>
-                <tr>
-                    <td>
-                        <p>Creative Team</p>
-                    </td>
-                    <td>
-                        <p>Research Development</p>
-                    </td>
-                    <td>
-                        <p>Strategy</p>
-                    </td>
-                    <td>
-                        <p>Strategy</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
+                        <p style="margin-right: 30px;">Creative Team</p>
+                        <p style="margin-right: 30px;">Research Development</p>
+                        <p style="margin-right: 60px;">Strategy</p>
+                        <p>Strategy</p><br>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
+                        <p>Jaylon Korsgaard</p><br>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
+                        <p>Jaylon Korsgaard</p><br>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
                         <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
-                        <p>Jaylon Korsgaard</p>
-                    </td>
-                    <td>
-                        <p>Jaylon Korsgaard</p>
-                    </td>
-                </tr>
-            </table>
         </div>
         <div class="abuAbu">
             <h2>OUR SPONSORS</h2>
-            <div style="margin-left: 170px;" class="img-sponsor">
                 <img src="img/sponsor2.png" alt="Disneyland" class="sponsor"> 
-            </div>
-            <div class="img-sponsor">
                 <img src="img/sponsor.png" alt="Playstation" class="sponsor2">
-            </div>
-            <div class="img-sponsor">
                 <img src="img/sponsor3.png" alt="Garuda Indonesia" class="sponsor2">
-            </div>
-            <div class="img-sponsor">
                 <img src="img/sponsor4.png" alt="Sky Travel" class="sponsor">
-            </div>
         </div>
     </main>
 
