--- a/destination2.html
+++ b/destination2.html
@@ -30,18 +30,10 @@
             <input  type="text" placeholder="Search" id="search">
             
         </div>
-        <div class="container">
-            <img src="img/beach2.jpg" alt="pantai dlodo">
-            <div class="detail">
-                <h1 >Pantai Dlodo</h1>
-                <img src="img/Star.png" alt="rate" class="rate"><br>
-                <h2>Location</h2> 
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
-                    Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
-                <img src="img/location.png" alt="location" class="location">
-            </div>
-            <div class="">
+        <div class="container cf">
+            <div class="kiri">
+                <img src="img/beach2.jpg" alt="pantai dlodo">
+            <div class="deskripsi">
                 <h3>Fasilitas</h3>
                 <p>Penginapan</p><br>
                 <h3>Deskripsi</h3>
@@ -49,20 +41,32 @@
                     Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
                     Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p><br>
             </div>
-            <div>
+            <div class="review">
                 <h3>Review</h3>
+                <div id="baris1">
                 <p>Pemandangan</p>
                 <img src="img/Star.png" alt="rate" class="rate2">
+                </div>
+                <div id="baris1">
                 <p>Kerapian</p>
                 <img src="img/Star.png" alt="rate" class="rate2">
+                </div>
+                <div id="baris1">
                 <p>Fasilitas</p>
                 <img src="img/Star.png" alt="rate" class="rate2">
+                </div><br>
+                <div id="baris2">
                 <p>Infrastruktur</p>
                 <img src="img/Star.png" alt="rate" class="rate2">
+                </div>
+                <div id="baris2">
                 <p>Kebersihan</p>
                 <img src="img/Star.png" alt="rate" class="rate2">
+                </div>
+                <div id="baris2">
                 <p>Keamanan</p>
                 <img src="img/Star.png" alt="rate" class="rate2">
+                </div>
             </div>
             <div class="card">
                 <img src="img/Ellipse 1.png" alt="hanna" class="profile">
@@ -76,12 +80,24 @@
                     Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
                     Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
             </div>
-            <div>
+            </div>
+            <div class="kanan">
+                <div class="detail">
+                    <h1 >Pantai Dlodo</h1>
+                    <img src="img/Star.png" alt="rate" class="rate"><br>
+                    <h2>Location</h2> 
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
+                        Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
+                </div>
+                <img src="img/location.png" alt="location" class="location">
+            <div class="galeri">
                 <h3>Galeri</h3>
                 <img src="img/Rectangle 23-3.png" alt="beach" class="explore">
                 <img src="img/Rectangle 23-1.png" alt="beach" class="explore">
                 <img src="img/Rectangle 23.png" alt="beach" class="explore">
                 <img src="img/Rectangle 23-2.png" alt="beach" class="explore">
+            </div>
             </div>
     </main>
 </body>
