--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
      
 
 
-    <div style ="width: 100%; ;"class="bagianbawah">
+    <div style ="width: 100%;"class="bagianbawah">
 
         <div class="header">
             <h1  >Featured Beach</h1>
             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="263" viewBox="0 0 1917 263" fill="none">
-                <path d="M958.5 263L0.24292 0.5L1916.76 0.5L958.5 263Z" fill="#3387C3"/>
+                <path d="M958.5 263L0.24292 0.5L1916.76 0.5L958.5 263Z" fill="#A2CDEC"/>
                 </svg>
 
         </div>
