--- a/SignUp.html
+++ b/SignUp.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="bg">
-        <img src="img/bg-beach(filtered).png" alt="">
+        <img src="img/bg-beachblue.jpg" alt="">
     </div>
     
     
@@ -123,7 +123,7 @@
                   <br>Once you submit your application, we will contact you shortly to complete your membership application</br> Thank You !
               </p>
               <hr>
-              <input type="button" value="submit">
+              <input type="button" value="Submit">
         </form>
 
     </div>
