--- a/destination.html
+++ b/destination.html
@@ -50,7 +50,7 @@
                 <option>Banyuwangi</option>
             </select>
         </div>
-        <div style="margin-left: 30%; position: relative; ">
+        <div class="box" >
             <div class="card kiri">
                 <a href="destination2.html"> <img src="img/beach2.jpg" alt="pantai dlodo"></a>
                 <a href="destination2.html" class="klik">Pantai Dlodo</a>
