Changes in Gallery Adding caption in slideshow Changing bg to white

--- a/Gallery.html
+++ b/Gallery.html
@@ -40,13 +40,21 @@
     
                     <div class="first slide">
                         <img src="img/Gambar slide.png" alt="" >
-                        
+                        <div  class="cap">
+                            <p>Pantai Dlodo</p>
+                        </div>
                     </div>
                     <div class="slide">
                         <img src="img/Gambar slide 2.png" alt="" >
+                        <div  class="cap">
+                            <p>Pantai Sidem</p>
+                        </div>
                     </div>
                     <div class="slide">
                         <img src="img/Gambar slide 3.png" alt="" >
+                        <div  class="cap">
+                            <p>Pantai Sanur</p>
+                        </div>
                     </div>
                     <!---NAV Auto-->
                     <div class="navauto">
@@ -64,8 +72,8 @@
             </div>
             </div>
         </div>
-        <div style="display: flex; flex-wrap: wrap; align-items: baseline;" class="img container">
-            <div  class="card">
+        <div style="display: flex; flex-wrap: wrap; align-items: center; margin-left: 6%;" class="img container">
+            <div   class="card">
                 <img style="width: 100%; height: auto;"   src="img/Group 12.jpg" alt="">
                 <div style=" display: flex; " class="quote">
                     <div >Pantai Dlodo </div>
