Fixes many page Changing all Background to white Refining all pages Fixes Design Error

--- a/community.html
+++ b/community.html
@@ -53,10 +53,13 @@
         </div>
         <div class="abuAbu">
             <h2>OUR SPONSORS</h2>
+            <div style="text-align: center;" class="container-sponsor">
                 <img src="img/sponsor2.png" alt="Disneyland" class="sponsor"> 
                 <img src="img/sponsor.png" alt="Playstation" class="sponsor2">
                 <img src="img/sponsor3.png" alt="Garuda Indonesia" class="sponsor2">
                 <img src="img/sponsor4.png" alt="Sky Travel" class="sponsor">
+            </div>
+                
         </div>
     </main>
 
