--- a/destination2.html
+++ b/destination2.html
@@ -34,8 +34,15 @@
             <div class="kiri">
                 <img src="img/beach2.jpg" alt="pantai dlodo">
             <div class="deskripsi">
-                <h3>Fasilitas</h3>
-                <p>Penginapan</p><br>
+                <div class="fasilitas">
+                    <h3>Fasilitas</h3>
+                    <div class="Penginapan">
+                        <img class="icon" src="img/libre-map-hotel logo.png" alt="" srcset="">
+                        <p>Penginapan</p><br>
+                    </div>
+                    
+                </div>
+                
                 <hr><br>
                 <h3>Deskripsi</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -72,13 +79,21 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/Ellipse 1.png" alt="hanna" class="profile">
-                <p>Hanna Curtis</p>
+                <div style="" class="akun">
+                    <img src="img/Ellipse 1.png" alt="hanna" class="profile">
+                    <p>Hanna Curtis</p>
+                </div>
+                <div class="line" ></div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
                     Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
-                <img src="img/Ellipse 2.png" alt="jaxson" class="profile">
-                <p>Jaxson Ekstrom Bothman</p>
+                </p>
+
+                <div class="akun">
+                    <img src="img/Ellipse 2.png" alt="jaxson" class="profile">
+                    <p>Jaxson Ekstrom Bothman</p>
+                </div>
+                <div class="line" ></div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Sunt eum cupiditate magni, harum libero dignissimos cum dolor!
                     Sapiente maiores velit nesciunt voluptas neque fugit fuga dicta doloremque, modi impedit eligendi!</p>
@@ -99,7 +114,8 @@
                 <img src="img/Rectangle 23-3.png" alt="beach" class="explore">
                 <img src="img/Rectangle 23-1.png" alt="beach" class="explore">
                 <img src="img/Rectangle 23.png" alt="beach" class="explore">
-                <img src="img/Rectangle 23-2.png" alt="beach" class="explore">
+                <img src="img/Rectangle 23-2.png" alt="beach" class="explore"><br>
+                <a style="margin-left: 60%;" href="Gallery.html">View More</a>
             </div>
             </div>
     </main>
