--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
      
 
 
-    <div style ="width: 100%;"class="bagianbawah">
+    <div style ="width: 100%; margin-top: -6px;"class="bagianbawah">
 
         <div class="header">
             <h1  >Featured Beach</h1>
