Fixed common issue

--- a/SignUp.html
+++ b/SignUp.html
@@ -123,9 +123,17 @@
                   <br>Once you submit your application, we will contact you shortly to complete your membership application</br> Thank You !
               </p>
               <hr>
-              <input type="button" value="Submit">
+              <button onclick="submit()">Submit</button>
         </form>
 
     </div>
+
+<script >
+
+     function submit() {
+        alert("aaaaaa")
+    }
+
+</script>
 </body>
 </html
