--- a/SignUp.html
+++ b/SignUp.html
@@ -18,10 +18,10 @@
     <div class="menu">
         <ul>
             <a href ="index.html" >Home</a>
-            <a href="" class="nav">Destination</a>
-            <a href="" class="nav">History</a>
+            <a href="destination.html" class="nav">Destination</a>
+            <a href="history.html" class="nav">History</a>
             <a href="Gallery.html" class="nav" >Gallery</a>
-            <a href="" style=" font-weight: bold;" class="nav">Community</a>
+            <a href="community.html" style=" font-weight: bold;" class="nav">Community</a>
         </ul>
         </ul>
         
